--- a/src/main/resources/templates/adminhome.html
+++ b/src/main/resources/templates/adminhome.html
@@ -4,7 +4,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       layout:decorator="layout">
-<head th:replace="layout :: html_head" />
+<head th:replace="layout :: html_head">
+    <title>Панель администратора</title>
+</head>
 <body>
 <div th:replace="layout :: header">Header</div>
 <div layout:fragment="content">
