--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -4,12 +4,20 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout">
-
-<head th:replace="layout :: html_head" />
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet"
+          th:href="@{/assets/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet"
+          th:href="@{/assets/fontawesome-6.2.1/css/fontawesome.min.css}" />
+    <link rel="stylesheet" th:href="@{/assets/css/styles.css}" />
+    <title>Страница недоступна :(</title>
+</head>
 <body>
     <div th:replace="layout :: header">Header</div>
     <div layout:fragment="content">
-        <h2 class="title_403">У вас недостаточно прав, чтобы просматривать эту страницу! 😥</h2>
+        <h2 class="title_403">У Вас недостаточно прав, чтобы просматривать эту страницу! 😥</h2>
     </div>
     <div th:replace="layout :: footer">Footer</div>
 </body>
