--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       layout:decorator="layout">
-<head th:replace="layout :: html_head">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet"
+          th:href="@{/assets/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet"
+          th:href="@{/assets/fontawesome-6.2.1/css/fontawesome.min.css}" />
+    <link rel="stylesheet" th:href="@{/assets/css/styles.css}" />
     <title>Регистрация</title>
 </head>
 <body>
@@ -19,12 +26,12 @@
                     <div class="form-group has-feedback">
                         <input required type="text" class="form-control" name="username"
                                placeholder="Введите логин" th:field="*{login}"/> <span
-                            class="glyphicon glyphicon-user form-control-feedback"></span>
+                            class="glyphicon glyphicon-pencil form-control-feedback"></span>
                     </div>
                     <div class="form-group has-feedback">
-                        <input required type="email" class="form-control" name="email"
-                               placeholder="Введите электронную почту" th:field="*{email}"/> <span
-                            class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                        <input required type="text" class="form-control" name="name"
+                               placeholder="Введите имя" th:field="*{name}"/> <span
+                            class="glyphicon glyphicon-user form-control-feedback"></span>
                     </div>
                     <div class="form-group has-feedback">
                         <input required type="password" class="form-control" name="password"
