--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,13 +28,13 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#" th:href="@{/home}">Личный кабинет</a>
-                </li>
-                <li>
                     <a href="#" th:href="@{/events}">Мероприятия</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/home" th:href="@{/home}" sec:authentication="principal.username"></a>
+                </li>
                 <li sec:authorize="!isAuthenticated()">
                     <a href="/login" th:href="@{/login}">
                         <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Войти
