--- a/src/main/resources/templates/userhome.html
+++ b/src/main/resources/templates/userhome.html
@@ -19,7 +19,7 @@
 <div layout:fragment="content" class="container">
 	<div class="row">
 		<div class="panel panel-default">
-			<div class="panel-heading">  <h4>Личный кабинет 👤</h4></div>
+			<div class="panel-heading">  <h4>Личный кабинет</h4></div>
 			<div class="panel-body">
 				<div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
 					<img style="width: 300px; height: 300px;" alt="User Pic"
