--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -37,7 +37,7 @@ body {
     width: 500px;
     height: 350px;
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -49,4 +49,42 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+#message {
+  display:none;
+  background: #F5F5F5;
+  color: #000;
+  position: relative;
+  padding: 10px 10px 7px 10px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  border-radius: 3px;
+}
+
+#message p {
+  padding: 0px 35px;
+  font-size: 14px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "✔";
+}
+
+/* Add a red text color and an "x" when the requirements are wrong */
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "✖";
 }
