--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,12 +23,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Главная</a>
+            <a class="navbar-brand" th:href="@{/events}">Мероприятия</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>
-                    <a href="#" th:href="@{/events}">Мероприятия</a>
+                <li sec:authorize="isAuthenticated()">
+                    <a th:href="@{/home}">Личный кабинет</a>
+                </li>
+                <li sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a th:href="@{/admin/home}"> 🔑 Панель администратора</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
